# ChangeLog for dev-lang/v8
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.24 2011/01/06 16:07:59 phajdan.jr Exp $

*v8-3.0.4.1 (06 Jan 2011)

  06 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.0.4.1.ebuild:
  Version bump for dev channel release. Fails tests.

*v8-3.0.0.1-r1 (06 Jan 2011)
*v8-2.5.9.6-r1 (06 Jan 2011)

  06 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +v8-2.5.9.6-r1.ebuild, -v8-3.0.0.1.ebuild, +v8-3.0.0.1-r1.ebuild,
  +files/v8-upstream-bug-1016-r0.patch:
  Backport an upstream patch that is needed to fix bug #348609 reported by
  redneb <redneb@gmx.com>.

*v8-2.5.9.6 (05 Jan 2011)

  05 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-2.5.9.6.ebuild:
  Version bump for beta channel release.

  02 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-2.4.9.14.ebuild,
  v8-2.5.9.1.ebuild, v8-3.0.0.1.ebuild, v8-9999.ebuild:
  Remove a test that behaves differently depending on FEATURES="userpriv",
  bug #348558 by patrick, root cause identified by Mike Gilbert
  <floppymaster@gmail.com>.

  31 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-2.4.9.13.ebuild,
  v8-2.4.9.14.ebuild, v8-2.5.9.1.ebuild, v8-3.0.0.1.ebuild, v8-9999.ebuild,
  +files/v8-gentoo-bug-349794-r0.patch:
  Fix build, bug #349794 by flameeyes. Used patch by Mike Gilbert
  <floppymaster@gmail.com>.

*v8-3.0.0.1 (18 Dec 2010)

  18 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.0.0.1.ebuild:
  Version bump for dev channel release. Fails tests.

*v8-9999 (14 Dec 2010)

  14 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-9999.ebuild:
  Add live ebuild, bug #266502 by Vladimir Dolzhenko
  <vladimir.dolzhenko@gmail.com>. Used modified ebuild by Mike Gilbert
  <floppymaster@gmail.com>.

*v8-2.4.9.14 (10 Dec 2010)

  10 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-2.4.9.14.ebuild,
  -v8-2.5.2.ebuild, -v8-2.5.4.ebuild, -v8-2.5.6.ebuild: