@@ -4,16 +4,14 @@ AUX v8-no-werror-r0.patch 573 RMD160 17791cdee16894b37e937f23146aff52bc3d4775 SH
 AUX v8-upstream-bug-1016-r0.patch 1340 RMD160 3fccd4a6942a0821901be9fe73434be49e7188be SHA1 98b98d23d8b115eafb4a8e678a717de44f18ebf8 SHA256 76b82fd48ec9145b3ea6fce104224f757217636b863fcf2d98ef699e2cea2a58
 AUX v8-upstream-bug-773-r0.patch 512 RMD160 407e6f3d557c8fbda2deb12698006a39c86bab60 SHA1 37b9f275b4dcd732a5f66b24a5b3dcab6f644142 SHA256 1be72e0ae271969ad67ce9226c89c9def78f3a9be9000be5a752f871b47178cc
 DIST v8-2.4.9.14.tar.gz 10034446 RMD160 0cd090f9d1a20fa39049a3e4dc3f3cf82b0e0134 SHA1 486e63b1e98828f1c83539606f358f5f0d248a9d SHA256 7ef107438207d37e5a83f2457a69b7d49dda66185555c7dc1442ea99d200c885
-DIST v8-2.5.9.1.tar.gz 10104829 RMD160 47da6931c860898a15072b1dc1403815771b24c2 SHA1 63219988953cdd533ba23f0fd1bb7be8e31f8e27 SHA256 1375d5e569f7e24db5a714ba43b6cee0ac99de9f654ab856c32332cb66d09ff6
 DIST v8-2.5.9.6.tar.gz 10106694 RMD160 c79e13ad4da598967a45528f3ac9e10f52990215 SHA1 060d84405296ae72695dd0b3be15c00c3ce07d0d SHA256 56bad0ec1c83c49ef24f549bdb10446001107d1f77e2b23a9837c492dd94d504
-DIST v8-3.0.0.1.tar.gz 10421221 RMD160 b38337daebb8f64c1c696799a55aa7985191a554 SHA1 d60eaf49c9611ac9879b69ab63509d99aac7b08c SHA256 355e94736ef8c51ae10446475dc994995ea3f6f3b8c564afe47a8e8ce3c7c8d3
 DIST v8-3.0.4.1.tar.gz 10453053 RMD160 8e0527f28f317bbaac6b943c0e3c71beaf2ef498 SHA1 fd25f7a022b04ccdcfa641131d990e16284bfd24 SHA256 1c01c7c497b1b028dd568b2c997c6ac8a179fe70c798a9a83af833692351cd55
+DIST v8-3.0.6.1.tar.gz 10459731 RMD160 510759acf32ba7876b7f5fe63d8866f29118d26a SHA1 03bb4acbdd8c10cdd7927100ad022f4b07c04e59 SHA256 0c18ff56953a4b842a9d4b0f364a77e8c1db0bb49c4922f3f652ed05b6e3d421
 EBUILD v8-2.4.9.14.ebuild 2143 RMD160 12ae6aa4c28488e22f74542b9f04138d12081f78 SHA1 dee23d92da1707c9fb4307e3ccc80ab61867a918 SHA256 0c7c5e985e6b97dd1f8d43b52d8ddc34762321884c173bcaaa680f1efa085003
-EBUILD v8-2.5.9.1.ebuild 2202 RMD160 249af84a65a07cfa4d4247f302fa488cfb4767b3 SHA1 da1e128bfe6938748932de32469058932d21ce3d SHA256 065057e111884b5c46fdb37b88eaf93d38302cc100a9958c0508ca0e7384ff2e
 EBUILD v8-2.5.9.6-r1.ebuild 2335 RMD160 0e959666c2ef395986dcb2b874575779eb84a109 SHA1 ebdae1a8f1c5fd363971f41a798e85fe5b0d1867 SHA256 be804672719a457eb8bc6873851ce0902611cb0e9811217bb3aaf181be76ae8e
 EBUILD v8-2.5.9.6.ebuild 2202 RMD160 634efc909c3d894ac5d36408c0a2096854e6f720 SHA1 db53c23abfffb33b05b90899c699b00aa4c5e48b SHA256 eddaf62ae3d55c071ade7055ee7081de7f2008160491b9ec09715c6b63975302
-EBUILD v8-3.0.0.1-r1.ebuild 2335 RMD160 60a6f55dd5fa439e18ea07fdea694189f729e4b3 SHA1 db0649645b950ed4fba0448154890b9631e6786c SHA256 a7fd3f57f9d15f54189768ebd9b635c94cd8dd5962768c3623162cedfb1d7df3
 EBUILD v8-3.0.4.1.ebuild 2332 RMD160 51266dd937b4be902dccf8c48d9101129fa6c9be SHA1 01c920a586d546cfcd40e2ff54e8da6923b0a1d7 SHA256 a1ff67e1b44c5a78d80bdcdc1d6e8d2d482afe8e09f66b01811806833cec8c8a
+EBUILD v8-3.0.6.1.ebuild 2202 RMD160 7dc46f8978a658ff56c80adb23611990717f9c8d SHA1 7824377b8fb659ca3cec233865eb7bf61e1658fc SHA256 f08d9a7be7a2f5ea3fb18862e585146251b186c4359bb981adf2debc327657d3
 EBUILD v8-9999.ebuild 2290 RMD160 06e4e0b7cf43415530ad35502de09dda025e6e9c SHA1 c994a1392267a88333b57794fdba6f0b821aede0 SHA256 bf170bbbb695a311b3baebf0a4dde4ebbf87fbc8974bc02e198b04124c5de05b
-MISC ChangeLog 4462 RMD160 8795302054ad8ad01ac14e6f3d50a0cf4b96a299 SHA1 54a73c90eb66f0bc0041cf8961a382b8d4437326 SHA256 0911111f163310dc8e657ec92fd48a7fa7c181edef2c2edbfdf6e719fa7db2a6
+MISC ChangeLog 4675 RMD160 66960d5a0d266ad2d87c37d5c4f5da78c9e5b3f6 SHA1 16220b8c1a4c53af79a8f6965304912dd0f775d8 SHA256 fe36e3837f12c386e9b09322bbecb9edd0d3b062d4998f03b44144c491494191
 MISC metadata.xml 162 RMD160 3485b95578a49782c3188a0f963f90c688287fe1 SHA1 46226eeaf4948209a093253f92010abea501daef SHA256 8a3ecdcf518f45ec4843398f9896c9b4d1c867ff2cf2851cf40b06f756f111e8
