@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/v8-2.5.9.1.ebuild,v 1.3 2011/01/02 15:51:34 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/v8-3.0.6.1.ebuild,v 1.1 2011/01/12 12:58:17 phajdan.jr Exp $
 
 EAPI="2"
 
